# mumpi

./: .gitignore  .gitmodules  CMakeLists.txt  mumpi.usp
include/: MumpiCallback.hpp
src/: MumpiCallback.cpp  main.cpp
